2009-05-22  Alan McGovern  <amcgovern@novell.com>

	* GeneratedPInvokes.cs: regen.

2009-05-21  Alan McGovern  <amcgovern@novell.com>

	* GeneratedPInvokes.cs: regen.

2009-05-20  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs:
	* MoonlightTypeConverter.cs: DataBinding and ManagedXamlLoader
	  use exactly the same type conversion as Styles and
	  ObjectKeyFrames - so merge both of them to use
	  MoonlightTypeConverter. This also fixes several
	  typeconversion related databinding issues.

2009-05-20  Alan McGovern  <amcgovern@novell.com>

	* Kind.cs:
	* Value.cs:
	* Types.g.cs: Register 'float' as a known type

2009-05-20  Alan McGovern  <amcgovern@novell.com>

	* Helper.cs: If the type specified in the TypeConverter
	  attribute is not of the correct type, bail out instead of
	  throwing an InvalidCastException

2009-05-20  Chris Toshok  <toshok@ximian.com>

	* Types.cs (Types.Find): find all interfaces for the type as well,
	and pass them to RegisterType.
	(Types.RegisterType): add interfaces, which we pass as an array of
	kinds to unmanaged.

	* NativeMethods.cs: sucks, but i had to move types_register_type
	back here since the generator was confusing the array parameter
	with an out-param.  not sure how to do this with the current
	generator, or if it's possible..

	* Kind.cs: regen.

	* GeneratedPInvokes.cs: regen.

2009-05-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs: Regenerated.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Updated.

2009-05-16  Alan McGovern  <amcgovern@novell.com>

	* Types.cs:
	* NativeMethods.cs:
	* ManagedXamlLoader.cs:
	* GeneratedPInvokes.cs:
	* MoonlightTypeConverter.cs: Add type converting to
	  ObjectKeyFrame. The conversion is done during the Resolve